Added more workflows

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,3 +8,12 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
+      - run: npm run build
+      - uses: ./
+        id: vercel-action-production
+        if: github.event_name == 'push'
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
+          working-directory: ./.next
