--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "14"
+      - run: npm install next
       - run: npm run build
       - uses: ./
         id: vercel-action-production
