--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,11 +10,10 @@ jobs:
           node-version: "14"
       - run: npm install next
       - run: npm run build
-      - uses: ./
-        id: vercel-action-production
-        if: github.event_name == 'push'
+      - name: deploy site to vercel      
+        uses: amondnet/vercel-action@v20
         with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
-          working-directory: ./.next
+            vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
+            vercel-args: '--prod' #Optional
+            vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}  #Required
+            vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}} #Required 
