--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,11 +9,13 @@ jobs:
         with:
           node-version: "14"
       - run: npm install next
+      - run: npm run migrate-latest-prod
+      - run: npm run seed
       - run: npm run build
-      - name: deploy site to vercel      
+      - name: deploy site to vercel
         uses: amondnet/vercel-action@v20
         with:
-            vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
-            vercel-args: '--prod' #Optional
-            vercel-org-id: ${{ secrets.VERCEL_ORG_ID}}  #Required
-            vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}} #Required 
+          vercel-token: ${{ secrets.VERCEL_TOKEN }} # Required
+          vercel-args: "--prod" #Optional
+          vercel-org-id: ${{ secrets.VERCEL_ORG_ID}} #Required
+          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID}} #Required
