--- a/package.json
+++ b/package.json
@@ -6,10 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate-latest-dev": "npx knex migrate:latest --knexfile ./database/knexfile.js",
+    "migrate-latest-prod": "npx knex migrate:latest --env production --knexfile ./database/knexfile.js",
+    "migrate-down-all-dev": "npx knex migrate:rollback --all --knexfile ./database/knexfile.js",
+    "migrate-down-all-prod": "npx knex migrate:rollback --all --env production --knexfile ./database/knexfile.js",
+    "seed": "knex seed:run --env development --knexfile ./database/knexfile.js"
   },
   "dependencies": {
+    "@mapbox/node-pre-gyp": "^1.0.9",
+    "@vscode/sqlite3": "^5.0.8",
+    "dotenv": "^16.0.0",
+    "knex": "^1.0.5",
     "next": "^12.1.0",
+    "objection": "^3.0.1",
+    "pg": "^8.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1"
