--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "build": "next build next ",
+    "start": "next start next",
     "lint": "next lint",
     "migrate-latest-dev": "npx knex migrate:latest --knexfile ./knexfile.js",
     "migrate-latest-prod": "npx knex migrate:latest --env production --knexfile ./knexfile.js",
@@ -17,8 +17,11 @@
     "@mapbox/node-pre-gyp": "^1.0.9",
     "@vscode/sqlite3": "^5.0.8",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "express-openid-connect": "^2.7.2",
     "knex": "^1.0.5",
     "next": "^12.1.0",
+    "next-auth": "^4.3.1",
     "objection": "^3.0.1",
     "pg": "^8.7.3",
     "react": "17.0.2",
