--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
+    "dev-https": "local-ssl-proxy --key localhost-key.pem --cert localhost.pem --source 4001 --target 3001",
     "build": "next build next ",
     "start": "next start next",
     "lint": "next lint",
@@ -14,23 +15,32 @@
     "seed": "knex seed:run --env development --knexfile ./knexfile.js"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.7.0",
     "@mapbox/node-pre-gyp": "^1.0.9",
+    "@prisma/client": "^3.13.0",
     "@vscode/sqlite3": "^5.0.8",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-openid-connect": "^2.7.2",
     "knex": "^1.0.5",
+    "local-ssl-proxy": "^1.3.0",
     "next": "^12.1.0",
     "next-auth": "^4.3.1",
+    "next-connect": "^0.12.2",
+    "next-validations": "^0.2.0",
     "objection": "^3.0.1",
     "pg": "^8.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/react": "^18.0.8",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
-    "sass": "^1.49.11"
+    "prisma": "^3.13.0",
+    "sass": "^1.49.11",
+    "typescript": "^4.6.4"
   }
 }
