--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "migrate-down-all-dev": "npx knex migrate:rollback --all --knexfile ./knexfile.js",
     "migrate-down-all-prod": "npx knex migrate:rollback --all --env production --knexfile ./knexfile.js",
     "migrate-dev": "npx prisma migrate dev",
-    "seed": "knex seed:run --env development --knexfile ./knexfile.js"
+    "migrate-deploy": "npx prisma migrate deploy",
+    "seed": "knex seed:run --env development --knexfile ./knexfile.js",
+    "prebuild": "prisma generate"
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.7.0",
