Added logout and profile picture

--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
     "build": "next build ",
     "start": "next start",
     "lint": "next lint",
-    "migrate-latest-dev": "npx knex migrate:latest --knexfile ./knexfile.js",
-    "migrate-latest-prod": "npx knex migrate:latest --env production --knexfile ./knexfile.js",
-    "migrate-down-all-dev": "npx knex migrate:rollback --all --knexfile ./knexfile.js",
-    "migrate-down-all-prod": "npx knex migrate:rollback --all --env production --knexfile ./knexfile.js",
     "migrate-dev": "npx prisma migrate dev",
     "migrate-deploy": "npx prisma migrate deploy",
     "seed": "knex seed:run --env development --knexfile ./knexfile.js",
@@ -22,10 +18,15 @@
     "@mapbox/node-pre-gyp": "^1.0.9",
     "@prisma/client": "^3.13.0",
     "@vscode/sqlite3": "^5.0.8",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "cloudinary-react": "^1.8.1",
+    "cookie": "^0.5.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-openid-connect": "^2.7.2",
+    "formik": "^2.2.9",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.5",
     "local-ssl-proxy": "^1.3.0",
     "next": "^12.1.0",
@@ -36,6 +37,7 @@
     "pg": "^8.7.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-easy-crop": "^4.5.0",
     "react-icons": "^4.3.1",
     "yup": "^0.32.11"
   },
