--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "objection": "^3.0.1",
     "pg": "^8.7.3",
     "react": "17.0.2",
+    "react-aspect-ratio": "^1.1.2",
     "react-dom": "17.0.2",
     "react-easy-crop": "^4.5.0",
     "react-icons": "^4.3.1",
