--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "17.0.2",
     "react-easy-crop": "^4.5.0",
     "react-icons": "^4.3.1",
+    "react-loader-spinner": "^5.3.4",
     "yup": "^0.32.11"
   },
   "devDependencies": {
