--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "bcrypt": "^5.0.1",
     "cloudinary-react": "^1.8.1",
     "cookie": "^0.5.0",
+    "dollars-to-cents": "^1.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-openid-connect": "^2.7.2",
+    "form-data": "^4.0.0",
+    "formidable": "^2.0.1",
     "formik": "^2.2.9",
     "jsonwebtoken": "^8.5.1",
     "knex": "^1.0.5",
@@ -35,8 +38,10 @@
     "next-validations": "^0.2.0",
     "objection": "^3.0.1",
     "pg": "^8.7.3",
+    "qs": "^6.11.0",
     "react": "17.0.2",
     "react-aspect-ratio": "^1.1.2",
+    "react-currency-input-field": "^3.6.5",
     "react-dom": "17.0.2",
     "react-easy-crop": "^4.5.0",
     "react-icons": "^4.3.1",
