--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vscode/sqlite3": "^5.0.8",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "classnames": "^2.3.2",
     "cloudinary-react": "^1.8.1",
     "cookie": "^0.5.0",
     "dollars-to-cents": "^1.0.3",
