Changed fields in product model in database, dropdown works correctly with cloudinary except for lazy-loading. Dropdown is currently fixed, remember to change back to onhover when you're done testing

--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.7.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@mapbox/node-pre-gyp": "^1.0.9",
+    "@mui/joy": "^5.0.0-alpha.50",
     "@prisma/client": "^4.4.0",
     "@vscode/sqlite3": "^5.0.8",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "classnames": "^2.3.2",
+    "cloudinary-build-url": "^0.2.4",
     "cloudinary-react": "^1.8.1",
     "cookie": "^0.5.0",
     "dollars-to-cents": "^1.0.3",
